Fixed contrast issues for some styles

--- a/gui/admin-gui/src/frontend/scss/_color.scss
+++ b/gui/admin-gui/src/frontend/scss/_color.scss
@@ -137,3 +137,6 @@
   background-color: var(--bs-primary) !important;
 }
 
+.col-form-label {
+  color: var(--bs-body-color);
+}
