--- a/gui/admin-gui/src/frontend/scss/_midpoint.scss
+++ b/gui/admin-gui/src/frontend/scss/_midpoint.scss
@@ -1777,7 +1777,7 @@ span.yui-skin-sam {
 }
 
 .login-panel-description {
-  color: $text-muted;
+  color: var(--bs-body-color);
   font-size: 14px;
 }
 
